# clocscan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE_MIT.md  README.md  TODO.md  sample.json
.github/workflows/: doc.yml  release.yml  rust.yml
benches/: bench_is_comment.rs  bench_regex.rs  clocscan.rs
docs/: README.md  configuration.md  how-it-works.md  sample.json
src/: analyzer.rs  config.rs  file_reading.rs  functions.rs  lib.rs  main.rs
