[package]
name = "loc-counter-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.4"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
anyhow = "1.0"
rayon = "1.8"
prettytable-rs = "0.10.0"
